# agno_template

./: .env.docker.example  .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.docker/: .dockerignore  README.md  docker-compose.override.yml  docker-compose.yml
.resources/features/agent_discovery_system/: plan.md  spec-kit-commands.md
.resources/references/: agno_tools_reference_sep_14_2025.md
.specify/memory/: constitution.md
app/: server.py
app/agents/: __init__.py  base.py  builder.py  decorators.py  docs_agent.py  factory.py  manager.py  registry.py
app/agents/definitions/: README.md  __init__.py  docs_agent.py  docs_agent_configuration.py  docs_agent_convention.py  docs_agent_decorator.py
app/agents/templates/: __init__.py
app/db/: __init__.py  db_settings.py
app/db/postgres/: settings.py
app/models/: factory.py  provider_registry.py
app/models/providers/: google.py  openai.py
app/tools/: __init__.py
app/tools/mcp/: __init__.py  manager.py  registry.py
app/utils/: log.py
docker/: .dockerignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml
resources/code_review/: agent_discovery_system_review.md
resources/features/agent_discovery_system/: spec-kit-commands.md
resources/references/: spec-kit_reference_sep_14_2025.md
specs/001-create-an-agent/: data-model.md  implementation-audit.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-an-agent/contracts/: agent_builder_api.py  agent_manager_api.py  discovery_patterns.py
